Major changes in 3.36.0:
* Updated translations

Major changes in 3.35.92:
* Reorganize source code folders
* Redesigned event editor dialog
* Many other minor code cleanups
* Updated translations

Major changes in 3.35.2:
* New Nightly app icon
* Updated translations
* Many code cleanups

Major changes in 3.34.0:
* Updated translations

Major changes in 3.33.4:
* Redesigned calendar management dialog
* New, more reliable web discoverer code
* Various bugfixes
* Updated translations

Major changes in 3.33.1:
(Changes to be documented in the future. This is a nonmaintainer release.)

Major changes in 3.32.1:
* Fix release date field in AppData
* Updated translations

Major changes in 3.32.0:
* Updated translations

Major changes in 3.31.90:
* Updated translations
* Fix build failures against latest EDS
* New app icon
* Rewrite timezone support for events
* Run nested EDS in Flatpak

Major changes in 3.30.0:
* Updated translations

Major changes in 3.29.92:
* Better handle 401 status codes when adding calendars (Ralph Plawetzki)
* Updated translations

Major changes in 3.29.90:
* Add Night Light integration
* Bugfixes
* Updated translations

Major changes in 3.27.92:
* Flatpak improvements
* New unit tests
* Updates translations

Major changes in 3.27.90:
* Big code refactorings that lead to more stability and ease of maintainership
* Follow-up improvements after rewritting the Month view
* Flatpak Nightly now builds with debug and tracing enabled
* Huge memory leaks were fixed
* Updates translations

Major changes in 3.27.2:
* Events now are rendered differently if they are all-day or timed
* Rewrite of the Month view
    * Month cells have more transitions and effects
    * The day number is above the cells
    * A new overflow popup window was introduced
    * Right-to-left languages are fully working now
* Plug some memory leaks (Florian Brosch)
* Improve filename handling when adding new calendars (Florian Brosch)
* Updates translations
